Some style changes.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -11,7 +11,7 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>Engagemedia</title>
+  <title>EngageMedia</title>
 
   <!-- Included Google Webfont -->
     <link href='http://fonts.googleapis.com/css?family=PT+Sans|Arimo:400,700' rel='stylesheet' type='text/css'>
@@ -42,7 +42,7 @@
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
                 <div class="three columns offset-by-one search">
-                    <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EnagageMedia">
+                    <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EngageMedia">
                 </div>
                 <div class="four columns menu">
                     <a href="#" class="header-menu-item header-button language"><img src="stylesheets/images/uk.png"></a>
@@ -58,7 +58,7 @@
         <div class="row content">
             <div class="nine columns">
                 <div class="row nest">
-                    <div class="video featured" id="featuredvideo">
+                    <div class="video featured shade" id="featuredvideo">
                         <div class="viewport">
                             <img class="featured-image" src="images/main.png">
                         </div>
@@ -102,68 +102,89 @@ World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expr
             </div>
 
             <div class="three columns news">
-                <div class="column-title"><h4>News & Events</h4></div>
-                <ul>
-                    <li><a href="#">Competition: Bhinneka Tinggal Duka</a><br />Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</li>
-                                    <li><a href="#">
-Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism</a><br />Report on the first ever citizen journalism and online subtitling workshop in Singapore.</li>
-                </ul>
-                <div class="column-title"><h4>EngageMedia Blog</h4></div>
-                <ul>
-                    <li><a href="#">Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</a><br />Over 2 weeks in early July, I traveled across 3 provinces in the conflict zone of Southern Thailand, and to the capital city of Bangkok.</li>
-                </ul>
-                <div class="column-title"><h4>Latest Comments</h4></div>
-                <ul>
-                    <li><a href="#"> philippe on Trou et Construction Citerne de récupération de l'eau de Pluie en Ferrociment</a><br />Super,je suis content que j'ai servi d'inspiration.</li>
-                </ul>
+                <div class="news-section shade">
+                    <div class="column-title">
+                        <span class="column-title-icon"></span>
+                        <h4>News & Events</h4>
+                    </div>
+                    <ul>
+                        <li><a href="#">Competition: Bhinneka Tinggal Duka</a><br />Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</li>
+                                        <li><a href="#">
+    Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism</a><br />Report on the first ever citizen journalism and online subtitling workshop in Singapore.</li>
+                    </ul>
+                </div>
+                <div class="news-section shade">
+                    <div class="column-title ">
+                        <span class="column-title-icon"></span>
+                        <h4>EngageMedia Blog</h4>
+                    </div>
+                    <ul>
+                        <li><a href="#">Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</a><br />Over 2 weeks in early July, I traveled across 3 provinces in the conflict zone of Southern Thailand, and to the capital city of Bangkok.</li>
+                    </ul>
+                    </div>
+                <div class="news-section shade">
+                    <span class="column-title-icon"></span>
+                    <div class="column-title ">
+                        <span class="column-title-icon"></span>
+                        <h4>Latest Comments</h4>
+                    </div>
+                    <ul>
+                        <li><a href="#"> philippe on Trou et Construction Citerne de récupération de l'eau de Pluie en Ferrociment</a><br />Super,je suis content que j'ai servi d'inspiration.</li>
+                    </ul>
+                </div>
+
+                <div class="news-section">
+                    <div class="fb"></div>
+                    <div class="twitter"></div>
+                </div>
             </div>
         </div>
         <div class="row row-title"><h4>Latest Videos</h4></div>
         <div class="row content" id="latestvideos">
                 <div class="three columns video tablet-one">
-                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
@@ -210,7 +231,7 @@ Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journ
                             <input type="submit" id="newsletter-submit" class="button small" name="newsletter-submit" value="Go">
                         </form>
                     </li>
-                    <li>Contact</li>   
+                    <li>Contact Us</li>   
                     <li>
                         <span class="social-title">Social Media</span>
                         <span class="fb"></span>
