first page theming

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -109,7 +109,7 @@
                 <div class="news-section shade">
                     <div class="column-title">
                         <span class="column-title-icon"></span>
-                        <h4>News & Events</h4>
+                        <h4 id='news-title'>News & Events</h4>
                     </div>
                     <ul id="news-right-portlet">
                         <li><a href="#"><h5>Competition: Bhinneka Tinggal Duka</h5>Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</a></li>
@@ -120,7 +120,7 @@
                 <div class="news-section shade">
                     <div class="column-title ">
                         <span class="column-title-icon"></span>
-                        <h4>EngageMedia Blog</h4>
+                        <h4 id="blogs-title">EngageMedia Blog</h4>
                     </div>
                     <ul id="blogs-right-portlet">
                         <li><a href="#"><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5> Over 2 weeks in early July, I traveled across 3 provinces in the conflict zone of Southern Thailand, and to the capital city of Bangkok.</a></li>
@@ -130,7 +130,7 @@
                     <span class="column-title-icon"></span>
                     <div class="column-title ">
                         <span class="column-title-icon"></span>
-                        <h4>Latest Comments</h4>
+                        <h4 id="comments-title">Latest Comments</h4>
                     </div>
                     <ul id="comments-right-portlet">
                         <li><a href="#"> <h5>philippe on Trou et Construction Citerne de récupération de l'eau de Pluie en Ferrociment</h5>Super,je suis content que j'ai servi d'inspiration.</a></li>
@@ -138,8 +138,8 @@
                 </div>
 
                 <div class="news-section social-networks">
-                    <div class="fb"></div>
-                    <div class="twitter"></div>
+                    <a href="http://twitter.com/EngageMedia" target="_blank"><div class="twitter"></div></a>
+                    <a href="http://www.facebook.com/group.php?gid=43640854087" target="_blank"><div class="fb"></div></a>
                 </div>
             </div>
         </div>
