Added video content. Added rollovers. First version of text page.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -145,51 +145,91 @@
         <div class="row row-title"><h4>Latest Videos</h4></div>
         <div class="row content" id="latestvideos">
                 <div class="three columns video tablet-one">
-                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade">
+                        <img src="images/v1.png">
+                    </div>
                     <div class="under">
-                        <h5>Video Title</h5>
+                        <h5>Tembok Bolong</h5>
+                    </div>
+                    <div class="rollover">
+                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade">
+                        <img src="images/v2.png">
+                    </div>
                     <div class="under">
-                        <h5>Video Title</h5>
+                        <h5>The Last Hunter</h5>
+                    </div>
+                    <div class="rollover">
+                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade">
+                        <img src="images/v3.png">
+                    </div>
                     <div class="under">
-                        <h5>Video Title</h5>
+                        <h5>Buruh Migran</h5>
+                    </div>
+                    <div class="rollover">
+                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade">
+                        <img src="images/v1.png">
+                    </div>
                     <div class="under">
-                        <h5>Video Title</h5>
+                        <h5>Tembok Bolong</h5>
+                    </div>
+                    <div class="rollover">
+                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade">
+                        <img src="images/v3.png">
+                    </div>
                     <div class="under">
-                        <h5>Video Title</h5>
+                        <h5>Buruh Migran</h5>
+                    </div>
+                    <div class="rollover">
+                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade">
+                        <img src="images/v2.png">
+                    </div>
                     <div class="under">
-                        <h5>Video Title</h5>
+                        <h5>The Last Hunter</h5>
+                    </div>
+                    <div class="rollover">
+                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade">
+                        <img src="images/v1.png">
+                    </div>
                     <div class="under">
-                        <h5>Video Title</h5>
+                        <h5>Tembok Bolong</h5>
+                    </div>
+                    <div class="rollover">
+                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div class="viewport shade" style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport shade">
+                        <img src="images/v3.png">
+                    </div>
                     <div class="under">
-                        <h5>Video Title</h5>
+                        <h5>Buruh Migran</h5>
+                    </div>
+                    <div class="rollover">
+                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
                     </div>
                 </div>
                 <div class="six columns centered load-more"><a class="button large" href="#">Load More</a></div>
