Tackling some of the more trivial feedback points.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -112,7 +112,9 @@
                         <h4 id='news-title'>News & Events</h4>
                     </div>
                     <ul id="news-right-portlet">
-                        <li><a href="#"><h5>Competition: Bhinneka Tinggal Duka</h5>Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</a></li>
+                        <li><a href="#">May, 16<h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
+                        <li><a href="#">June, 23<h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
+                        <li><a href="#">July, 01<h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
                     </ul>
                 </div>
                 <div class="news-section shade">
@@ -121,7 +123,7 @@
                         <h4 id="blogs-title">EngageMedia Blog</h4>
                     </div>
                     <ul id="blogs-right-portlet">
-                        <li><a href="#"><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5> Over 2 weeks in early July, I traveled across 3 provinces in the conflict zone of Southern Thailand, and to the capital city of Bangkok.</a></li>
+                        <li><a href="#">May, 16<h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
                     </ul>
                     </div>
                 <div class="news-section shade">
@@ -131,7 +133,9 @@
                         <h4 id="comments-title">Latest Comments</h4>
                     </div>
                     <ul id="comments-right-portlet">
-                        <li><a href="#"> <h5>philippe on Trou et Construction Citerne de récupération de l'eau de Pluie en Ferrociment</h5>Super,je suis content que j'ai servi d'inspiration.</a></li>
+                        <li><a href="#">May, 16<h5>philippe on Trou et Construction Citerne</h5></a></li>
+                        <li><a href="#">May, 19<h5>philippe on Trou et Construction Citerne</h5></a></li>
+                        <li><a href="#">July, 02<h5>philippe on Trou et Construction Citerne</h5></a></li>
                     </ul>
                 </div>
 
@@ -285,8 +289,8 @@
         </div>
         <div class="row footer">
             <div class="colophon"><a href="http://plumi.org">
-                powered by <b>Plumi</b>
-                <span class="plumi-logo"></span>
+                powered by <b>Plumi</b> <span class="plumi-logo"></span> - Except where otherwise noted, content on this site is licensed under a <b><a href="#">Creative Commons Attribution 3.0 Australia Licence.</a></b>
+                
             </a></div>
         </div>
     </div>
