Minor news and featured items changes.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -79,27 +79,29 @@
                 <div class="row nest">
                     <div class="eight columns">
                         <div class="featured-content">
-                            <img class="featured-image" src="images/image_mini_2.png">
-                            <div class="featured-text">
-                                <a href="#">
+                            <a href="#">
+                                <img class="featured-image" src="images/image_mini_2.png">
+                                <span class="featured-text">
+                                
                                     <h5>
                                         World Press Freedom Day: The Ultimate Faq
                                     </h5>
                                     International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. 
-                                </a>
-                            </div>
+                                
+                                </span>
+                            </a>
                         </div>
                     </div>
 
                     <div class="four columns">
                         <div class="featured-filmmaker">
-                            <img class="featured-image" src="images/image_mini.png">
-                            <div class="featured-text">
-                                <a href="#">
+                            <a href="#">
+                                <img class="featured-image" src="images/image_mini.png">
+                                <span class="featured-text">
                                     <h5>Featured Filmmaker: </h5>
                                     Sathis Kumar Krishnan
-                                </a>
-                            </div>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
