Some extra changes.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -47,8 +47,8 @@
                 <div class="four columns menu">
                     <a href="#" class="header-menu-item header-button language"><img src="stylesheets/images/uk.png"></a>
                     <a href="#" class="header-menu-item header-button user">User</a>
-                    <a href="/publish" class="header-menu-item">Publish</a>
-                    <a href="/taxonomy" class="header-menu-item">Browse</a>
+                    <a href="/publish" class="header-menu-item">Upload</a>
+                    <a href="/taxonomy" class="header-menu-item">Watch</a>
                 </div>
             </div>
         </div>
@@ -60,12 +60,13 @@
                 <div class="row nest">
                     <div class="video featured shade" id="featuredvideo">
                         <div class="viewport">
-                            <img class="featured-image" src="images/main.png">
-                        </div>
-                        <div class="unisub">
-                            <div class="unisub-proxy">
+                            <img src="images/main.png">
+                            <div class="unisub">
+                                <div class="unisub-proxy">
+                                </div>
                             </div>
                         </div>
+                        
                         <div class="under">
                             <h3>Witch Hunt Online</h3>
                             <div class="video-actions">
@@ -122,7 +123,7 @@
                 <div class="news-section shade">
                     <div class="column-title ">
                         <span class="column-title-icon"></span>
-                        <h4 id="blogs-title">EngageMedia Blog</h4>
+                        <h4 id="blogs-title">Staff Blog</h4>
                     </div>
                     <ul id="blogs-right-portlet">
                         <li><a href="#">May, 16<h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
