New featured video layout.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -67,12 +67,12 @@
                             </div>
                         </div>
                         
-                        <div class="under">
+                        <div class="description">
                             <h3>Witch Hunt Online</h3>
+                            <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </p>
                             <div class="video-actions">
                                 <a href="#"><span>View High Quality</span></a>
                                 <a href="#"><span>Download</span></a>
-                                <a href="#"><span>Share</span></a>
                             </div>
                         </div>
                     </div>
