First iteration of dropdown using css.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -45,10 +45,53 @@
                     <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EngageMedia">
                 </div>
                 <div class="four columns menu">
-                    <a href="#" class="header-menu-item header-button language"><img src="stylesheets/images/uk.png"></a>
-                    <a href="#" class="header-menu-item header-button user">User</a>
-                    <a href="/publish" class="header-menu-item">Upload</a>
-                    <a href="/taxonomy" class="header-menu-item">Watch</a>
+                    <ul class="header-menu-item">
+                        <li class="header-button">
+                            <a href="#" class="english language"></a>
+                        </li>
+                        <li>
+                            <ul class="dropdown shade">
+                                <li>
+                                    <a href="#" class="english language"></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="indonesian language"></a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="header-menu-item">
+                        <li class="header-button">
+                            <a href="#" class="user">
+                                User
+                            </a>
+                        </li>
+                        <li>
+                            <ul class="dropdown shade">
+                                <li>
+                                    <a href="#">One</a>
+                                </li>
+                                <li>
+                                    <a href="#">Two</a>
+                                </li>
+                                <li>
+                                    <a href="#">Three</a>
+                                </li>
+                                <li>
+                                    <a href="#">Four</a>
+                                </li>
+                                <li>
+                                    <a href="#">Five</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <a href="/publish" class="header-menu-item">
+                        Upload
+                    </a>
+                    <a href="/taxonomy" class="header-menu-item">
+                        Watch
+                    </a>
                 </div>
             </div>
         </div>
