Improved some dropdown styling.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -52,10 +52,10 @@
                         <li>
                             <ul class="dropdown shade">
                                 <li>
-                                    <a href="#" class="english language"></a>
+                                    <a href="#" class="english language">English</a>
                                 </li>
                                 <li>
-                                    <a href="#" class="indonesian language"></a>
+                                    <a href="#" class="indonesian language">Indonesian</a>
                                 </li>
                             </ul>
                         </li>
