Changed header elements layout.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -69,19 +69,19 @@
                         <li>
                             <ul class="dropdown shade">
                                 <li>
-                                    <a href="#">One</a>
+                                    <a href="#">My Profile</a>
                                 </li>
                                 <li>
-                                    <a href="#">Two</a>
+                                    <a href="#">My Folder</a>
                                 </li>
                                 <li>
-                                    <a href="#">Three</a>
+                                    <a href="#">Admin</a>
                                 </li>
                                 <li>
-                                    <a href="#">Four</a>
+                                    <a href="#">Review List</a>
                                 </li>
                                 <li>
-                                    <a href="#">Five</a>
+                                    <a href="#">Log Out</a>
                                 </li>
                             </ul>
                         </li>
