Markup and CSS simplification. Added video view page.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div id="upper-container">
-        <div class="row header">
+        <div class="row no-v-padding header">
             <div class="twelve columns header">
                 <div class="one column main-logo"></div>
                 <div class="three columns main-title">
@@ -98,9 +98,9 @@
     </div>
 
     <div id="mid-container">
-        <div class="row content">
+        <div class="content row">
             <div class="nine columns">
-                <div class="row nest">
+                <div class="row full no-v-padding">
                     <div class="video featured shade" id="featuredvideo">
                         <div class="viewport">
                             <img src="images/main.png">
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row nest">
+                <div class="row full">
                     <div class="eight columns">
                         <div class="featured-content">
                             <a href="#">
@@ -151,49 +151,49 @@
                 </div>
             </div>
 
-            <div class="three columns news">
-                <div class="news-section shade">
+            <div class="three columns news sidebar">
+                <div class="sidebar-section shade">
                     <div class="column-title">
                         <span class="column-title-icon"></span>
                         <h4 id='news-title'>News & Events</h4>
                     </div>
                     <ul id="news-right-portlet">
-                        <li><a href="#">May, 16<h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
-                        <li><a href="#">June, 23<h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
-                        <li><a href="#">July, 01<h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
+                        <li><a href="#"><p class="date">May, 16</p><h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
+                        <li><a href="#"><p class="date">June, 23</p><h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
+                        <li><a href="#"><p class="date">July, 01</p><h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
                     </ul>
                 </div>
-                <div class="news-section shade">
+                <div class="sidebar-section shade">
                     <div class="column-title ">
                         <span class="column-title-icon"></span>
                         <h4 id="blogs-title">Staff Blog</h4>
                     </div>
                     <ul id="blogs-right-portlet">
-                        <li><a href="#">May, 16<h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
+                        <li><a href="#"><p class="date">May, 16</p><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
                     </ul>
                     </div>
-                <div class="news-section shade">
+                <div class="sidebar-section shade">
                     <span class="column-title-icon"></span>
                     <div class="column-title ">
                         <span class="column-title-icon"></span>
                         <h4 id="comments-title">Latest Comments</h4>
                     </div>
                     <ul id="comments-right-portlet">
-                        <li><a href="#">May, 16<h5>philippe on Trou et Construction Citerne</h5></a></li>
-                        <li><a href="#">May, 19<h5>philippe on Trou et Construction Citerne</h5></a></li>
-                        <li><a href="#">July, 02<h5>philippe on Trou et Construction Citerne</h5></a></li>
+                        <li><a href="#"><p class="date">May, 16</p><h5>philippe on Trou et Construction Citerne</h5></a></li>
+                        <li><a href="#"><p class="date">May, 19</p><h5>philippe on Trou et Construction Citerne</h5></a></li>
+                        <li><a href="#"><p class="date">July, 02</p><h5>philippe on Trou et Construction Citerne</h5></a></li>
                     </ul>
                 </div>
 
-                <div class="news-section social-networks">
+                <div class="sidebar-section social-networks">
                     <span>Stay in touch!</span>
                     <a href="http://twitter.com/EngageMedia" target="_blank"><div class="twitter"></div></a>
                     <a href="http://www.facebook.com/group.php?gid=43640854087" target="_blank"><div class="fb"></div></a>
                 </div>
             </div>
         </div>
-        <div class="row row-title"><h4>Latest Videos</h4></div>
-        <div class="row content" id="latestvideos">
+        <div class="row no-v-padding row-title"><h4>Latest Videos</h4></div>
+        <div class="content row" id="latestvideos">
                 <div class="three columns video tablet-one">
                     <div class="viewport shade">
                         <img src="images/v1.png">
